Fix search panel display on mobile
- Add brown border bottom to clarify where input field needs to be tapped
- Replace text class of search icon with text-brown to match brown colour used
across site

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -265,7 +265,7 @@ nav .bottom-nav-row ul a {
     box-shadow: 0 1px 0 0 #FFFFFF;
 }
 
-#mobile-top-nav-search:focus {
+#mobile-top-nav-search {
     border-bottom: 1px solid #392417;
     box-shadow: 0 1px 0 0 #392417;
 }
